style: prevent touch scroll when nav is active on mobile

--- a/components/layout/brandNavbar/brandNavbar.module.scss
+++ b/components/layout/brandNavbar/brandNavbar.module.scss
@@ -216,6 +216,7 @@
 
 // Mobile toggle menu states
 .mainNavigationContainerActive {
+  touch-action: none;
   position: relative;
   left: 0;
   top: 0;
